--- a/assets/style/scss/common.scss
+++ b/assets/style/scss/common.scss
@@ -25,7 +25,7 @@ body {
 		float: left;
 		background: url(~assets/images/home/logo@2x.png) no-repeat 50%;
 		background-size: cover;
-		width: 180px;
+		width: 262px;
 		height: 100px;
 	}
 	.topbar-tabs {
@@ -67,12 +67,12 @@ body {
       .sub-items {
         position: absolute;
         top: 100px;
-        height: 45px;
-        left: -50px;
-        width: 182px;
+        height: 44px;
+        left: -32px;
+        width: 150px;
         border: 1px solid #dee0e5;
         border-top: none;
-        padding-bottom: 22px;
+        padding-bottom: 20px;
         border-radius: 0 0 8px 8px;
         font-size: 16px;
         text-align: center;
@@ -112,6 +112,9 @@ body {
             color: #ea3323;
           }
         }
+      }
+      &.hidden {
+        visibility: hidden;
       }
     }
   }
