--- a/assets/style/scss/common.scss
+++ b/assets/style/scss/common.scss
@@ -19,28 +19,34 @@ body {
 
 .header-topbar .container {
 	width: 1220px;
-	height: 100px;
+	height: 72px;
 	margin: 0 auto;
 	.topbar-logo {
 		float: left;
 		background: url(~assets/images/home/logo@2x.png) no-repeat 50%;
 		background-size: cover;
-		width: 262px;
-		height: 100px;
+		width: 217px;
+		height: 72px;
 	}
 	.topbar-tabs {
 		float: right;
-		height: 100px;
-		line-height: 100px;
-    font-size: $fontSize16;
+		height: 72px;
+		line-height: 72px;
+		font-size: $fontSize16;
     .item-name {
       position: relative;
       display: inline-block;
       text-align: center;
       width: 82px;
       // margin-right: 108px;
-      margin-right: 50px;
-      color: #7f7f7f;
+      margin-right: 30px;
+			color: #7f7f7f;
+			&:first-child {
+				margin-right: 24px;
+			}
+			&:last-child {
+				margin-right: 40px;
+      }
       cursor: pointer;
 			&.active {
         cursor: pointer;
@@ -61,18 +67,16 @@ body {
         font-weight: bold;
         color: #ea3323;
 			}
-			&:last-child {
-				margin-right: 0;
-      }
+			
       .sub-items {
         position: absolute;
-        top: 100px;
+        top: 76px;
         height: 44px;
         left: -32px;
         width: 150px;
         border: 1px solid #dee0e5;
         border-top: none;
-        padding-bottom: 20px;
+        padding-bottom: 18px;
         border-radius: 0 0 8px 8px;
         font-size: 16px;
         text-align: center;
@@ -98,7 +102,8 @@ body {
           display: block;
           line-height: 1;
           color: #7f7f7f;
-          margin-bottom: 18px;
+					margin-bottom: 18px;
+					font-weight: normal;
           &:last-child {
             margin-bottom: 0;
           }
@@ -108,7 +113,7 @@ body {
             font-weight: bold;
           }
           &:hover {
-            cursor: pointer;
+						cursor: pointer;
             color: #ea3323;
           }
         }
@@ -116,7 +121,18 @@ body {
       &.hidden {
         visibility: hidden;
       }
-    }
+		}
+		.buy-btn {
+			float: right;
+			width: 120px;
+			height: 45px;
+			margin-top: 13.5px;
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: cover;
+			background-image: url(~assets/images/home/buy-btn.png);
+  		background-image: -webkit-image-set(url(~assets/images/home/buy-btn.png) 1x,url(~assets/images/home/buy-btn@2x.png) 2x);
+		}
   }
 }
 
